# zkm-photo

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  RELAY_LOG.md  REVIEW_ME.md  ROADMAP.archive.md  ROADMAP.md  TODO.archive.md  TODO.md  convert.py  plugin.yaml  pyproject.toml
features/: convert-photo.feature
src/zkm_photo/: convert.py  plugin.yaml
tests/: build_fixtures.py  conftest.py  test_convert.py  test_formats.py  test_timezone_conformance.py
tests/fixtures/: fake.heic  scan_2020.tif
