[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm-photo"
version = "0.1.0"
description = "zkm plugin: import JPEG photos into the knowledge store via EXIF metadata"
requires-python = ">=3.14"
dependencies = [
    "exifread>=3.0",
    "python-frontmatter>=1.1",
    "zkm",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "Pillow>=10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zkm_photo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
zkm = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "piexif>=1.1.3",
]
