[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zkm-photo"
version = "0.4.0"
description = "zkm plugin: import JPEG photos into the knowledge store via EXIF metadata"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Tobias Kienzler", email = "zommuter@googlemail.com"}]
keywords = ["knowledge-management", "markdown", "personal-data", "exif", "photo"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
dependencies = [
    "exifread>=3.0",
    "python-frontmatter>=1.1",
    "zkm>=0.4,<1.0",
]

[project.urls]
Homepage = "https://github.com/zommuter/zkm"
Repository = "https://github.com/zommuter/zkm-photo"
Issues = "https://github.com/zommuter/zkm-photo/issues"

[project.entry-points."zkm.plugins"]
photo = "zkm_photo"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "Pillow>=10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zkm_photo"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv.sources]
zkm = { path = "../..", editable = true }

[dependency-groups]
dev = [
    "piexif>=1.1.3",
]
